# copium

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TODO.md  annotated.html  classcopium_1_1Lexer-members.html  classcopium_1_1Lexer.html  classcopium_1_1Token-members.html  classcopium_1_1Token.html  classes.html  codestyle.md  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  lexer_8cpp.html  lexer_8cpp__incl.map  lexer_8cpp__incl.md5  lexer_8cpp_source.html  lexer_8hpp.html  lexer_8hpp__dep__incl.map  lexer_8hpp__dep__incl.md5  lexer_8hpp__incl.map  lexer_8hpp__incl.md5  lexer_8hpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  menudata.js  namespacecopium.html  (+17 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml  static_analysis.yml
apps/copium/: CMakeLists.txt
apps/copium/src/: main.cpp
docs/: doxygen.config  index.md  spec.md  test.copium
docs/language_spec/: language_specification.md
docs/spec/: grammar.md  type_system.md
libs/lexer/: lexer.hpp
search/: all_1.js  all_10.js  all_12.js  all_2.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_e.js  enumvalues_f.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js
src/: Lexer.cpp  Lexer.hpp  lexer.cpp  lexer.hpp  main.cpp  token.cpp  token.hpp  token_type.hpp
src/lexer/: lexer.cpp  token.cpp  token_type.hpp
tests/unit/: CMakeLists.txt
tests/unit/lexer/: LexerTests.cpp
